--- a/src/App.css
+++ b/src/App.css
@@ -39,10 +39,11 @@
   background: linear-gradient(
     to right,
     rgba(229, 221, 218, 0) 0%,
-    rgba(229, 221, 218, 0.6) 10%,
-    rgba(229, 221, 218, 0.6) 90%,
+    rgba(229, 221, 218, 0.6) 20%,
+    rgba(229, 221, 218, 0.6) 80%,
     rgba(229, 221, 218, 0) 100%
   );
+  padding: 5px 150px 5px 150px;
   margin: 10px 10px 10px 10px;
   position: relative;
   left: 5%;
